--- a/index.html
+++ b/index.html
@@ -22,6 +22,24 @@
                 <textarea class="form-control" id="complaint_description" name="complaint_description" rows="4" required></textarea>
             </div>
 
+            <!-- Complaint Against -->
+            <div class="form-group">
+                <label for="complaint_against">Complaint Against</label>
+                <input type="text" class="form-control" id="complaint_against" name="complaint_against" required>
+            </div>
+
+            <!-- Hospital Name -->
+            <div class="form-group">
+                <label for="hospital_name">Hospital Name</label>
+                <input type="text" class="form-control" id="hospital_name" name="hospital_name" required>
+            </div>
+
+            <!-- Hospital Location -->
+            <div class="form-group">
+                <label for="hospital_location">Hospital Location</label>
+                <input type="text" class="form-control" id="hospital_location" name="hospital_location" required>
+            </div>
+
             <!-- Your Name -->
             <div class="form-group">
                 <label for="complainant_name">Your Name</label>
