--- a/index.html
+++ b/index.html
@@ -10,112 +10,88 @@
     <div class="container">
         <h1 class="mt-5">Complaint Registration Form</h1>
         <form id="complaintForm" method="POST" action="/register" class="mt-4" enctype="multipart/form-data">
-            <!-- Complaint Title -->
             <div class="form-group">
                 <label for="complaint_title">Complaint Title</label>
                 <input type="text" class="form-control" id="complaint_title" name="complaint_title" required>
             </div>
-
-            <!-- Description of Complaint -->
+            
             <div class="form-group">
                 <label for="complaint_description">Description</label>
                 <textarea class="form-control" id="complaint_description" name="complaint_description" rows="4" required></textarea>
             </div>
 
-            <!-- Complaint Against -->
             <div class="form-group">
                 <label for="complaint_against">Complaint Against</label>
                 <input type="text" class="form-control" id="complaint_against" name="complaint_against" required>
             </div>
 
-            <!-- Hospital Name -->
             <div class="form-group">
                 <label for="hospital_name">Hospital Name</label>
                 <input type="text" class="form-control" id="hospital_name" name="hospital_name" required>
             </div>
 
-            <!-- Hospital Location -->
             <div class="form-group">
                 <label for="hospital_location">Hospital Location</label>
                 <input type="text" class="form-control" id="hospital_location" name="hospital_location" required>
             </div>
 
-            <!-- Your Name -->
             <div class="form-group">
                 <label for="complainant_name">Your Name</label>
                 <input type="text" class="form-control" id="complainant_name" name="complainant_name" required>
             </div>
 
-            <!-- Email Address -->
             <div class="form-group">
                 <label for="email">Email Address</label>
                 <input type="email" class="form-control" id="email" name="email" required>
             </div>
 
-            <!-- Phone Number -->
             <div class="form-group">
                 <label for="phone">Phone Number</label>
                 <input type="text" class="form-control" id="phone" name="phone" maxlength="10" pattern="[0-9]{10}" title="Please enter a valid 10-digit phone number" required>
             </div>
 
-            <!-- Aadhar Number -->
             <div class="form-group">
                 <label for="aadhar">Aadhar Number</label>
                 <input type="text" class="form-control" id="aadhar" name="aadhar" maxlength="12" pattern="[0-9]{12}" title="Please enter a valid 12-digit Aadhar number" required>
             </div>
 
-            <!-- Complaint Date -->
             <div class="form-group">
                 <label for="complaint_date">Date of Complaint</label>
                 <input type="date" class="form-control" id="complaint_date" name="complaint_date" required>
             </div>
 
-            <!-- Photo Upload -->
             <div class="form-group">
                 <label for="complaint_photo">Upload a Photo (optional)</label>
                 <input type="file" class="form-control" id="complaint_photo" name="complaint_photo">
             </div>
 
-            <!-- Submit Button -->
             <button type="submit" class="btn btn-primary">Submit Complaint</button>
         </form>
     </div>
     
-    <!-- JavaScript for Validation -->
     <script>
         document.getElementById('complaintForm').addEventListener('submit', function(event) {
-            // Get the complaint date value
             const complaintDate = document.getElementById('complaint_date').value;
-
-            // Get the current date in the format YYYY-MM-DD
             const currentDate = new Date().toISOString().split('T')[0];
-
-            // Check if the selected complaint date is equal to today's date
             if (complaintDate !== currentDate) {
                 alert("The complaint date must be today's date.");
-                event.preventDefault();  // Prevent form submission
+                event.preventDefault(); 
                 return;
             }
 
-            // Get the phone number
             const phoneInput = document.getElementById('phone').value;
-
-            // Validate phone number
             const phonePattern = /^[0-9]{10}$/;
             if (!phonePattern.test(phoneInput)) {
                 alert("Please enter a valid 10-digit phone number.");
-                event.preventDefault(); // Prevent form submission
+                event.preventDefault();
                 return;
             }
 
-            // Get the Aadhar number
             const aadharInput = document.getElementById('aadhar').value;
-
-            // Validate Aadhar number
             const aadharPattern = /^[0-9]{12}$/;
             if (!aadharPattern.test(aadharInput)) {
                 alert("Please enter a valid 12-digit Aadhar number.");
-                event.preventDefault(); // Prevent form submission
+                event.preventDefault();
                 return;
             }
         });
